--- a/JavaPRO/src/main/resources/templates/login.html
+++ b/JavaPRO/src/main/resources/templates/login.html
@@ -35,6 +35,19 @@
 </div>
 <!--Panel logowania-->
 <div class="text-center">
+    <!--Ikony do alertów-->
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+        <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+        </symbol>
+    </svg>
+    <!--Alert-->
+    <div th:if="${loginError}" class="error alert alert-danger d-flex align-items-center justify-content-center" role="alert">
+        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+        <div>
+            Logowanie nie powiodło się
+        </div>
+    </div>
     <form th:action="@{/login}" method="post">
         <label for="nrAlbum" class="sr-only"></label>
         <input type="text" id="nrAlbum" class="form-control" name="username" placeholder="Numer albumu" required autofocus>
@@ -44,7 +57,6 @@
             <input type="submit" value="Zaloguj" class="btn btn-lg btn-primary col-xs-6 col-sm-4"/>
         </div>
     </form>
-    <p th:if="${loginError}" class="error">Logowanie nie powiodło się</p>
 </div>
 
 
