--- a/JavaPRO/src/main/resources/templates/footer.html
+++ b/JavaPRO/src/main/resources/templates/footer.html
@@ -23,11 +23,11 @@
                 <hr class="light">
                 <h5>Przedmiot</h5>
                 <hr class="light">
-                <p>Technologie WEB i Java</p>
-                <p>Zakład Elektrodynamiki i Systemów Elektromaszynowych</p>
+                <p>Systemy teleinformatyczne</p>
+                <p>Zakład Systemów Złożonych</p>
                 <p>Wydział Elektrotechniki i Informatyki</p>
                 <p style="color:#373737">Hiszpańska inkwizycja</p>
-                <p>Prowadzący: Jan Prokop</p>
+                <p>Prowadzący: Franciszek Grabowski</p>
             </div>
             <div class="col-md-4 footer-center">
                 <hr class="light">
