--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -154,16 +154,16 @@
     <div class="row padding karta">
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top center" src="/img/prowadzacy.jpg" alt="Fot. Marian Misiakiewicz">
-                <figcaption class="figure-caption" style="font-size: 10px;" >Fot. Marian Misiakiewicz</figcaption>
+                <img class="card-img-top center" src="/img/prowadzacy2.jpg">
+                <figcaption class="figure-caption" style="font-size: 10px;" >Fot. Politechnika Rzeszowska</figcaption>
                 <div class="card-body inkarta">
                     <h4 class="card-title">
-                        dr hab. inż. prof. PRz Jan Prokop
+                        dr hab. inż. Franciszek Grabowski
                     </h4>
                     <p class="card-text text-justify">
                         Nauczyciel akademicki zatrudniony jako pracownik badawczo-dydaktyczny na stanowisku profesora uczelni na Wydziale Elektrotechniki i Informatyki Politechniki Rzeszowskiej.
                     </p>
-                    <a href="http://jprokop.prz.edu.pl/#/" class="btn btn-primary">Wyświetl stronę</a>
+                    <a href="http://franciszekgrabowski.sd.prz.edu.pl/" class="btn btn-primary">Wyświetl stronę</a>
                 </div>
             </div>
         </div>
