--- a/JavaPRO/src/main/resources/templates/adminPanel.html
+++ b/JavaPRO/src/main/resources/templates/adminPanel.html
@@ -44,7 +44,7 @@
 
 <!--Panel administratora-->
 <div class="container-fluid flex-wysrodkuj">
-    <table class="table table-hover rounded-top">
+    <table class="table table-hover table-admin col-xs-12">
         <thead class="thead-dark text-center">
             <tr>
                 <th class="table-center" style="width: 35%" scope="col" rowspan="2">Nazwa</th>
