front: responsywna tabela w adminie

--- a/JavaPRO/src/main/resources/templates/adminPanel.html
+++ b/JavaPRO/src/main/resources/templates/adminPanel.html
@@ -44,13 +44,13 @@
 
 <!--Panel administratora-->
 <div class="container-fluid flex-wysrodkuj">
-    <table class="table table-hover table-admin col-xs-12">
+    <table class="table table-hover col-xs-12">
         <thead class="thead-dark text-center">
             <tr>
-                <th class="table-center" style="width: 35%" scope="col" rowspan="2">Nazwa</th>
-                <th class="table-center" style="width: 30%"scope="col" colspan="2">Studenci</th>
-                <th class="table-center" style="width: 20%" scope="col" rowspan="2">Plik</th>
-                <th class="table-center" style="width: 15%" scope="col" rowspan="2">Ocena</th>
+                <th class="table-center" style="width: calc((100% - 290px)/2)" scope="col" rowspan="2">Nazwa</th>
+                <th class="table-center" style="width: calc((100% - 290px)/2)"scope="col" colspan="2">Studenci</th>
+                <th class="table-center" style="width: 130px" scope="col" rowspan="2">Plik</th>
+                <th class="table-center" style="width: 160px" scope="col" rowspan="2">Ocena</th>
             </tr>
             <tr>
                 <th class="table-center" scope="col">Imię i nazwisko</th>
