front: profile autorów FINAL FINAL FINAL FINAL

--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -117,12 +117,94 @@
         <div class="col-xs-12 col-sm-6">
             <img src="/img/EwaC.jpg" class="img-fluid img-autor">
             <h3>Łucja Pałkus</h3>
-            <p>Studentka, szaleje za Dr. PROkopem</p>
+            <p>Studentka 3 roku informatyki na Politechnice Rzeszowskiej.</p>
+            <div class="container-fluid flex-wysrodkuj">
+                <table>
+                    <thead class="text-center">
+                    <tr>
+                        <th colspan="2" class="table-center" scope="col">
+                            <h5>Zainteresowania</h5>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody class="zainteresowania">
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/fluency/48/000000/cello.png"/>
+                        </td>
+                        <td>Muzyka</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/external-icongeek26-flat-icongeek26/64/000000/external-wire-electrician-icongeek26-flat-icongeek26.png"/>
+                        </td>
+                        <td>Ręczne robótki</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/fluency/48/000000/fry.png"/>
+                        </td>
+                        <td>Gotowanie</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/color/48/000000/sunbathe.png"/>
+                        </td>
+                        <td>Wypoczynek</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/emoji/48/000000/pizza-emoji.png"/>
+                        </td>
+                        <td>Pizza</td>
+                    </tr>
+
+                    </tbody>
+                </table>
+            </div>
+
         </div>
         <div class="col-xs-12 col-sm-6">
             <img src="/img/Adam.jpg" class="img-fluid img-autor">
             <h3>Adam Szałański</h3>
-            <p>Student. Też szaleje za Dr. PROkopem</p>
+            <p>Student 3 roku informatyki na Politechnice Rzeszowskiej.</p>
+            <div class="container-fluid flex-wysrodkuj">
+                <table>
+                    <thead class="text-center">
+                    <tr>
+                        <th colspan="2" class="table-center" scope="col">
+                            <h5>Zainteresowania</h5>
+                        </th>                    </tr>
+                    </thead>
+                    <tbody class="zainteresowania">
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/emoji/48/000000/video-game-emoji.png"/>                        </td>
+                        <td>Gry komputerowe</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/color/48/000000/car--v2.png"/>                        </td>
+                        <td>Motoryzacja</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/emoji/48/000000/cooking-pot-emoji.png"/>                        </td>
+                        <td>Gotowanie</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/external-flat-juicy-fish/60/000000/external-gym-gym-life-flat-flat-juicy-fish-15.png"/>                        </td>
+                        <td>Sport</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="https://img.icons8.com/external-itim2101-flat-itim2101/64/000000/external-sleep-travel-itim2101-flat-itim2101.png"/>                        </td>
+                        <td>Sen</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <hr class="my-4">
