--- a/JavaPRO/src/main/resources/templates/register.html
+++ b/JavaPRO/src/main/resources/templates/register.html
@@ -64,7 +64,7 @@
         <input class="form-control mb-2 mt-1" type="text" id="nazwisko"  name="surname" placeholder="Podaj nazwisko" required >
         <label class="sr-only" for="email" >E-mail (z domeny PRz):</label>
         <input class="form-control mb-2 mt-1" type="email" id="email"  name="email" placeholder="Podaj e-mail np. nrAlbumu@stud.prz.edu.pl"
-               pattern="[a-z0-9._%+-]+@+(stud\.prz\.edu\.pl|prz\.edu\.pl)" required>
+               pattern="[a-zA-Z0-9._%+-]+@+(stud\.prz\.edu\.pl|prz\.edu\.pl)" required>
         <label class="sr-only" for="nrAlbumu">Numer albumu:</label>
         <input class="form-control mb-2 mt-1" type="text" id="nrAlbumu"  name="nrAlbum" placeholder="Podaj numer albumu" required >        <label class="sr-only" for="password" ></label>
         <label for="password" class="sr-only">Hasło:</label>
