--- a/JavaPRO/src/main/resources/templates/adminPanel.html
+++ b/JavaPRO/src/main/resources/templates/adminPanel.html
@@ -155,6 +155,8 @@
         <input class="form-control mb-2 mt-1" type="text" id="nazwa"  name="name" required>
         <label class="sr-only" for="opis" >Opis</label>
         <input class="form-control mb-2 mt-1" type="text" id="opis"  name="description" required>
+        <label class="sr-only" for="deadline" >Termin końcowy</label>
+        <input class="form-control mb-2 mt-1" type="date" id="deadline"  name="deadline" required>
         <div class="login-btn mt-3 mb-5 text-center">
             <button class="btn btn-md btn-primary col-xs-6 col-sm-4">Dodaj temat</button>
         </div>
