--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="col-12">
             <p class="lead">
-                Poniżej zanajdują się tematy projektów wraz z ich opisami, które można zrealizować w ramach projektu z przedmiotu Technologie WEB i Java.
+                Poniżej zanajdują się tematy projektów wraz z ich opisami, które można zrealizować w ramach projektu inżynierskiego na Politechnice Rzeszowskiej.
             </p>
         </div>
     </div>
@@ -115,7 +115,7 @@
 <div class="container-fluid padding">
     <div class="row text-center padding">
         <div class="col-xs-12 col-sm-6">
-            <img src="/img/EwaC.jpg" class="img-fluid img-autor">
+            <img src="/img/EwaC.jpg" class="img-fluid img-autor rounded">
             <h3>Łucja Pałkus</h3>
             <p>Studentka 3 roku informatyki na Politechnice Rzeszowskiej.</p>
             <div class="container-fluid flex-wysrodkuj zainteresowani">
@@ -179,7 +179,7 @@
 
         </div>
         <div class="col-xs-12 col-sm-6">
-            <img src="/img/Adam.jpg" class="img-fluid img-autor">
+            <img src="/img/Adam.jpg" class="img-fluid img-autor rounded">
             <h3>Adam Szałański</h3>
             <p>Student 3 roku informatyki na Politechnice Rzeszowskiej.</p>
             <div class="container-fluid flex-wysrodkuj zainteresowani">
@@ -268,7 +268,7 @@
 <!--Karta Prowadzącego-->
 <div class="container-fluid padding">
     <div class="row padding karta">
-        <div class="col-md-4">
+        <div class="col-md-3">
             <div class="card">
                 <img class="card-img-top center" src="/img/prowadzacy2.jpg">
                 <figcaption class="figure-caption" style="font-size: 10px;" >Fot. Politechnika Rzeszowska</figcaption>
